@@ -264,7 +264,7 @@ set g_noVoteTime 0
 set g_settings ""
 set g_spreeOptions 0
 set g_multikillTime 1000
-set g_spoofOptions 339
+set g_spoofOptions 3
 set g_maxWarnings 3
 set g_warningDecay 24
 set g_warningOptions 0
